Changed my email address to richardc@csd.uu.se.
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@4 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Primary author of this package:
 
 - Mickaël Rémond <mickael.remond@process-one.net>
-- Richard Carlsson <richardc@comhem.se>
+- Richard Carlsson <richardc@csd.uu.se>
