--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Primary author of this package:
 
 - Mickaël Rémond <mickael.remond@process-one.net>
-- Richard Carlsson <richardc@csd.uu.se>
+- Richard Carlsson <richardc@it.uu.se>
