updated the ancient README, CHANGELOG, and AUTHORS files
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@188 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,2 @@
-Primary author of this package:
-
-- Mickaël Rémond <mickael.remond@process-one.net>
-- Richard Carlsson <richardc@it.uu.se>
+Richard Carlsson <richardc@it.uu.se>
+Mickaël Rémond <mickael.remond@process-one.net>
