--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2007-04-05 Richard Carlsson <richardc@it.uu.se>
+
+	* Preparing for Beta release of EUnit 2.0 (after months in alpha)
+
 2005-12-13 Mickaël Rémond <mickael.remond@process-one.net>
 
 	* doc/NOTES.txt, include/unit.hrl, src/unit.erl, src/test.erl: Added
